Eco steer endpoint
